# headFirstCpp

./: CMakeLists.txt
1strategy/: Tadej.cpp  Tadej.h  Tadej_test.cpp  typedef.patch
2observer/: observer.cpp
3decorator/: decorator.cpp  wikipedia.cpp
4factory/: factory.cpp  factorySimple.cpp
5singleton/: singleton.cpp
6command/: command.cpp
7adapter/: adapter.cpp
8templateMethod/: templateMethod.cpp
misc/: CMakeLists.txt  binary.c  colors.c  console.cpp  cppolors.cpp
